# firm-ld

./: .pre-commit-config.yaml  README.md  pyproject.toml
firm_ld/: jsonld_utils.py  search.py  sparql.py  store.py
tests/: test_jsonld.py  test_search.py  test_sparql.py  test_store.py
