[tool.poetry]
name = "firm-ld"
version = "0.1.0"
description = "Linked Data support for the FIRM platform."
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firm = {path = "../firm", develop = true}
pyld = "^2.0.4"
rdflib = "^7.0.0"
httpx-cache = "^0.13.0"
starlette = "^0.38.2"
rdflib-endpoint = "^0.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-async = "^0.1.1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
